tests/lean/858.lean
section
  parameter (n : Πa, nat)
end
